objects/Add_to_Sales_Team__c.object
<CustomObject>
    <description>object used for requesting to Add to Opty Sales Team</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Team_role__c</fullName>
        <label>Opportunity Team role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backoffice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Designate or Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Business Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sales (Delivery)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Sales (Technical Consultant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Add to Sales Team</relationshipLabel>
        <relationshipName>Add_to_Sales_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permission__c</fullName>
        <label>Permission</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequestedUser__c</fullName>
        <label>Requested User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_User__c</fullName>
        <formula>$User.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_user_Id__c</fullName>
        <label>Requested user Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Add to Sales Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>Add to Sales Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add to Sales Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>